--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         </ul>
         <h1>BÚSQUEDA DE PATITOS
         </h1>
+        <h2 id="llevas"></h2>
+        <h2 id="restante"></h2>
         <main>
         </main>
     </div>
