--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
             <span style="--i:3">N</span>
 
         </div>
-        
+        <div
+            style="width: 100%; display: flex; align-items: center; justify-content: center; margin-top: 30px; margin-bottom: 30px;">
+            <div class="loader" id="loader" hidden></div>
+        </div>
         <main>
         </main>
         <button id="btn_select_all" class="button-74" role="button">Marcar todos</button>
